feat(Test): More work on test

--- a/tests/FrontendObjectTest.yml
+++ b/tests/FrontendObjectTest.yml
@@ -15,7 +15,9 @@ Member:
     FirstName: Page 
     Surname: Creator
     Email: page-creator@localhost
+    Groups: =>Group.creator
   approverMember:
     FirstName: Page 
     Surname: Approver
     Email: page-approver@localhost
+    Groups: =>Group.approver
