--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,11 @@ matrix:
     - php: 5.6
       env: DB=MYSQL CORE_RELEASE=3.2
     - php: 5.6
-      env: DB=PGSQL CORE_RELEASE=3.3
+      env: DB=MYSQL CORE_RELEASE=3.3
+    - php: 5.6
+      env: DB=MYSQL CORE_RELEASE=3.4
+    - php: 5.6
+      env: DB=MYSQL CORE_RELEASE=3.5
 
 before_script:
  - phpenv rehash
